fixing home page view on mobile devices

--- a/MTM-Frontend/src/pages/Home/Home.css
+++ b/MTM-Frontend/src/pages/Home/Home.css
@@ -99,3 +99,9 @@ body {
   margin-bottom: 1px;
   margin-top: 1px;
 }
+
+@media only screen and (max-height: 840px) {
+  .square-button {
+    height: 20px;
+  }
+}
